[gd_scene load_steps=19 format=3 uid="uid://cad3tiwf81iv2"]

[ext_resource type="Script" path="res://Scripts/jumper.gd" id="1_fpx5f"]
[ext_resource type="Script" path="res://Scripts/jumper_head.gd" id="2_x313m"]

[sub_resource type="Gradient" id="Gradient_cohyq"]
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_7x23l"]
gradient = SubResource("Gradient_cohyq")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bg1kg"]
size = Vector2(20, 10)

[sub_resource type="Gradient" id="Gradient_b2adq"]
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_0flwx"]
gradient = SubResource("Gradient_b2adq")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ok8si"]
size = Vector2(4, 8)

[sub_resource type="Gradient" id="Gradient_4jhel"]
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_jf4l4"]
gradient = SubResource("Gradient_4jhel")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ubhss"]
size = Vector2(20, 2)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mvvtp"]
size = Vector2(20, 4)

[sub_resource type="Animation" id="Animation_thkpc"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("head:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("neck:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_ggoxu"]
resource_name = "color"
length = 2.0
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0.741176, 0.0313726, 0.231373, 1), Color(0, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_dmxwy"]
resource_name = "off"
length = 0.2

[sub_resource type="Animation" id="Animation_b50o5"]
resource_name = "on"
length = 0.7
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("head:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 2), Vector2(0, -8)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("neck:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 0.7), Vector2(1, 1.9)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_mmyik"]
_data = {
"RESET": SubResource("Animation_thkpc"),
"color": SubResource("Animation_ggoxu"),
"off": SubResource("Animation_dmxwy"),
"on": SubResource("Animation_b50o5")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_h6uj5"]

[node name="jumper" type="Node2D"]
modulate = Color(0, 1, 1, 1)
scale = Vector2(0.8, 0.9)
script = ExtResource("1_fpx5f")

[node name="body" type="StaticBody2D" parent="."]
collision_layer = 8

[node name="Sprite2D" type="Sprite2D" parent="body"]
position = Vector2(6.55651e-07, 5)
scale = Vector2(0.078125, 10)
texture = SubResource("GradientTexture1D_7x23l")
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="body"]
position = Vector2(0, 5)
shape = SubResource("RectangleShape2D_bg1kg")
metadata/_edit_lock_ = true

[node name="neck" type="StaticBody2D" parent="."]
collision_layer = 8

[node name="Sprite2D" type="Sprite2D" parent="neck"]
position = Vector2(5.96046e-08, -4.1875)
scale = Vector2(0.015625, 8.625)
texture = SubResource("GradientTexture1D_0flwx")
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="neck"]
position = Vector2(0, -4)
shape = SubResource("RectangleShape2D_ok8si")
metadata/_edit_lock_ = true

[node name="head" type="StaticBody2D" parent="."]
collision_layer = 8
script = ExtResource("2_x313m")

[node name="Sprite2D" type="Sprite2D" parent="head"]
position = Vector2(-2.38419e-07, -9)
scale = Vector2(0.078125, 2)
texture = SubResource("GradientTexture1D_jf4l4")
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="head"]
position = Vector2(0, -9)
shape = SubResource("RectangleShape2D_ubhss")
metadata/_edit_lock_ = true

[node name="jump trigger area" type="Area2D" parent="head"]
position = Vector2(0, -12)
collision_layer = 10

[node name="CollisionShape2D" type="CollisionShape2D" parent="head/jump trigger area"]
shape = SubResource("RectangleShape2D_mvvtp")

[node name="RayCast" type="RayCast2D" parent="."]
target_position = Vector2(0, 12)
collision_mask = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_mmyik")
}
autoplay = "color"
speed_scale = 4.0
movie_quit_on_finish = true

[node name="distroyZone" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="distroyZone"]
shape = SubResource("RectangleShape2D_h6uj5")

[connection signal="body_entered" from="head/jump trigger area" to="." method="_on_jump_trigger_area_body_entered"]
[connection signal="body_exited" from="head/jump trigger area" to="." method="_on_jump_trigger_area_body_exited"]
[connection signal="area_entered" from="distroyZone" to="." method="_on_distroy_zone_area_entered"]
